# ChangeLog for sys-devel/distcc
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/distcc/ChangeLog,v 1.168 2008/01/04 05:54:06 betelgeuse Exp $

*distcc-2.18.3-r12 (04 Jan 2008)

  04 Jan 2008; Petteri Räty <betelgeuse@gentoo.org>
  +files/distcc-create-dir.patch, +files/distcc-freedesktop.patch,
  +distcc-2.18.3-r12.ebuild:
  Fix .desktop file installation to follow latest freedesktop specs. Fix the
  ebuild to install the gui monitor with gnome -gtk use flags. Create
  DISTCC_DIR if it doesn't exist to avoid regular error messages. Fixes bug
  #171507.

*distcc-2.18.3-r11 (04 Jan 2008)

  04 Jan 2008; Petteri Räty <betelgeuse@gentoo.org> +files/2.18-r1/conf,
  +files/2.18-r1/init, +files/distcc-avahi-configure.patch,
  +distcc-2.18.3-r11.ebuild:
  Add avahi support to distcc and use system copy of popt. Fixes bug #203874
  and bug #179631.

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing lisa from metadata.xml as per #23541.

  28 Apr 2007; Sven Wegener <swegener@gentoo.org> distcc-2.18.3-r10.ebuild:
  Fix *initd, *confd and *envd calls (#173884, #174266)

  26 Apr 2007; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Update for cluster herd split to hp-cluster and ha-cluster.

  26 Mar 2007; Alec Warner <antarus@gentoo.org> distcc-2.18.3-r10.ebuild:
  Remove dependency on portage: ref bug 162516

  04 Mar 2007; Lisa Seelye <lisa@gentoo.org> -distcc-2.16-r2.ebuild,
  -distcc-2.16-r3.ebuild, -distcc-2.18.3-r6.ebuild,
  -distcc-2.18.3-r7.ebuild, -distcc-2.18.3-r8.ebuild:
  Now trying to remove old files!

  04 Mar 2007; Lisa Seelye <lisa@gentoo.org> -files/2.17/conf,
  -files/2.17/init:
  Prune old versions and old PATCHLEVEL dirs in files that shouldnt be there.

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> distcc-2.16-r2.ebuild,
  distcc-2.16-r3.ebuild, distcc-2.18.3-r6.ebuild, distcc-2.18.3-r7.ebuild,
  distcc-2.18.3-r8.ebuild, distcc-2.18.3-r10.ebuild: