@@ -13,8 +13,8 @@ AUX distcc-gentoo-multilib-r1.patch 4245 RMD160 175cb4c2ce0e8ecb2262165b3fd9a0d8
 AUX distcc-gentoo-multilib.patch 3784 RMD160 f48a3f2f8c82379c30c9da0e49aa66ba34681882 SHA1 5a3ba956caaab2d5c6ef44ee3ded10a33ac870dc SHA256 d3af7a7592d0a11a35d294022b36feca2fb625e4799513bf56a79e0656278403
 DIST distcc-2.18-avahi.patch.bz2 9447 RMD160 eaf358bc417566bb8cf7ea005ce853df880f4e49 SHA1 af76073bdde6668f3013f4e84f693155b3b887ad SHA256 1c6fb40b57385870b267d3ce4285ba3fa32e57a335cfcd3b96f4f9a36645a97f
 DIST distcc-2.18.3.tar.bz2 341601 RMD160 c7ac6f3e161dccf39b841b57a3328b4208d28c2d SHA1 88e4c15826bdbc5a3de0f7c1bcb429e558c6976d SHA256 6500f1bc2a30b1f044ebed79c6ce15457d1712263e65f0db7d6046af262ba434
-EBUILD distcc-2.18.3-r10.ebuild 5139 RMD160 79ae291e66bf414f8b7a7eb87333fbb17bb2542a SHA1 492989c668dee04b1724b291ed7c05024083c225 SHA256 c3d9f9b4bc50e6fa18eef8e04c551e8da5635547ca72ffe334a698f9b85d7ead
-EBUILD distcc-2.18.3-r11.ebuild 5844 RMD160 06b8ffbe1a0f2ee6dca8cc1f143174ed5822687d SHA1 ea35a5cd75fa651aa080b403c3d164a373c6309c SHA256 da7dee2c2593792884914c5c9ac4c2cb869e8d6e1164846b0769fa303e0bc5a8
-EBUILD distcc-2.18.3-r12.ebuild 5731 RMD160 c8548dacdfb82b3eda4f546448d141a5df047395 SHA1 0c9ff8f6d7951f310162395bce409a47a1ff75fd SHA256 271cb3a107c0a75579b2168c432a98e9811af6e33b28cf790acc34f25ffd2105
-MISC ChangeLog 30901 RMD160 821690123ffb7a1510f8f39f55a08d7a26e347ef SHA1 0314c8b6d2052f3a5886c33d54e64de63be32f28 SHA256 e5e31d97b8186d5fd67eddddc3885fc2f4e60ca2f57b3797f3c106d947dac1c7
-MISC metadata.xml 311 RMD160 1a480ace832e20a2640e7546965d54974058df1c SHA1 29a13cdea1b2f7e4f2edaf1182658647616f34ab SHA256 15a24b4d03798665cf9af1619e2aefb8db4ed4e3b057467620afdf48af395f09
+EBUILD distcc-2.18.3-r10.ebuild 5157 RMD160 7d54c39ad5c57e38e36680fec055c368365a870e SHA1 db4f8d4305d14c86f7bafb307d119d0eebff2a3a SHA256 27dbcd56c12c309e639b91929d02241ced4c0501f46676924fefada482132368
+EBUILD distcc-2.18.3-r11.ebuild 5862 RMD160 b0dac9c0e179e8305837e9d7d496249cbe871beb SHA1 5bbab55e4c517b647ddafa9440789184a7399861 SHA256 288de088ee4bec742be535d034741311aa03f5a567e8538638924331e95a06fe
+EBUILD distcc-2.18.3-r12.ebuild 5749 RMD160 fde12b68bed467b72d710c6d8d382146c598afaa SHA1 688a4a6a0faf7aa7554199211feb4ea8ca8e4881 SHA256 56a4a59d6c33745c5b8b5c2fe10186f5b97e68840f7f8eb6c46fbaa96a400028
+MISC ChangeLog 31033 RMD160 1b5b8605c1fe9156769aa562d38443f445786500 SHA1 5e020968bbb09dc2c47fed7f05e9a87d04e1325a SHA256 b78dc2137253749b483a770f80f504e93f72658b47e7047335585bb01bbaf95a
+MISC metadata.xml 379 RMD160 420726180bf16a6ecc3f4be5f57ed0841926fb9c SHA1 cec305f87acbaeea3c2c106df48c9654451ab346 SHA256 fdee311afe18ec1446a2da7b4cf5c59189e7adb5b3c3f2955762d01b04bb6ad9
