@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/distcc
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/distcc/ChangeLog,v 1.168 2008/01/04 05:54:06 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/distcc/ChangeLog,v 1.169 2008/01/17 21:35:10 betelgeuse Exp $
+
+  17 Jan 2008; Petteri Räty <betelgeuse@gentoo.org> metadata.xml:
+  Add myself as the maintainer after getting ok from dberkholz.
 
 *distcc-2.18.3-r12 (04 Jan 2008)
 
